@@ -1,3 +1,14 @@
+2005-08-17  Mark Kettenis  <kettenis@gnu.org>
+
+	* floatformat.h (struct floatformat): Change type of large
+	argument for is_valid member to `const void *'.
+	(floatformat_to_double): Change type of second argument to `const
+	void *'.
+	(floatformat_from_double): Change type of last argument to `void
+	*'.
+	(floatformat_is_valid): Change type of last argument to `const
+	void *'.
+
 2005-07-14  Jim Blandy  <jimb@redhat.com>
 
 	* dis-asm.h (print_insn_m32c): New declaration.
